syntax = "proto3"; 
package ExampleGRPC.Proto;

message LoginRequest {	
	string id = 1;
	string password = 2;
}

message LoginResponse {
	bool success = 1;
	string message = 2;
}

service LoginService {
	rpc Login (LoginRequest) returns (LoginResponse) {}
}